--- a/GUI_main/GUI_change.ui
+++ b/GUI_main/GUI_change.ui
@@ -155,12 +155,12 @@
      <string>Filter</string>
     </property>
    </widget>
-   <widget class="QCheckBox" name="O1_check">
+   <widget class="QRadioButton" name="O1_radio">
     <property name="geometry">
      <rect>
-      <x>200</x>
-      <y>150</y>
-      <width>70</width>
+      <x>190</x>
+      <y>160</y>
+      <width>82</width>
       <height>17</height>
      </rect>
     </property>
@@ -168,12 +168,12 @@
      <string>O1</string>
     </property>
    </widget>
-   <widget class="QCheckBox" name="O2_check">
+   <widget class="QRadioButton" name="O2_radio">
     <property name="geometry">
      <rect>
-      <x>200</x>
-      <y>170</y>
-      <width>70</width>
+      <x>190</x>
+      <y>180</y>
+      <width>82</width>
       <height>17</height>
      </rect>
     </property>
@@ -257,13 +257,23 @@
     <string>Frequency</string>
    </property>
   </widget>
-  <widget class="QWidget" name="alpha_widget" native="true">
+  <widget class="QwtPlot" name="qwtPlot_3">
    <property name="geometry">
     <rect>
      <x>20</x>
-     <y>360</y>
-     <width>291</width>
-     <height>241</height>
+     <y>380</y>
+     <width>281</width>
+     <height>221</height>
+    </rect>
+   </property>
+  </widget>
+  <widget class="QLineEdit" name="painedit">
+   <property name="geometry">
+    <rect>
+     <x>100</x>
+     <y>330</y>
+     <width>113</width>
+     <height>20</height>
     </rect>
    </property>
   </widget>
