--- a/GUI_main/GUI_change.ui
+++ b/GUI_main/GUI_change.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>800</width>
-    <height>639</height>
+    <width>1330</width>
+    <height>701</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -16,9 +16,9 @@
   <widget class="QwtPlot" name="qwtPlot">
    <property name="geometry">
     <rect>
-     <x>340</x>
-     <y>40</y>
-     <width>441</width>
+     <x>0</x>
+     <y>20</y>
+     <width>431</width>
      <height>241</height>
     </rect>
    </property>
@@ -26,10 +26,10 @@
   <widget class="QFrame" name="frame">
    <property name="geometry">
     <rect>
-     <x>10</x>
-     <y>0</y>
-     <width>301</width>
-     <height>301</height>
+     <x>20</x>
+     <y>540</y>
+     <width>391</width>
+     <height>131</height>
     </rect>
    </property>
    <property name="frameShape">
@@ -54,8 +54,8 @@
    <widget class="QProgressBar" name="BatteryLevel">
     <property name="geometry">
      <rect>
-      <x>20</x>
-      <y>130</y>
+      <x>0</x>
+      <y>60</y>
       <width>151</width>
       <height>21</height>
      </rect>
@@ -67,8 +67,8 @@
    <widget class="QPushButton" name="btn2">
     <property name="geometry">
      <rect>
-      <x>150</x>
-      <y>240</y>
+      <x>200</x>
+      <y>70</y>
       <width>111</width>
       <height>23</height>
      </rect>
@@ -80,8 +80,8 @@
    <widget class="QPushButton" name="Exit">
     <property name="geometry">
      <rect>
-      <x>150</x>
-      <y>270</y>
+      <x>200</x>
+      <y>100</y>
       <width>101</width>
       <height>23</height>
      </rect>
@@ -93,8 +93,8 @@
    <widget class="QPushButton" name="btn1">
     <property name="geometry">
      <rect>
-      <x>0</x>
-      <y>240</y>
+      <x>200</x>
+      <y>10</y>
       <width>141</width>
       <height>23</height>
      </rect>
@@ -106,8 +106,8 @@
    <widget class="QLabel" name="label_2">
     <property name="geometry">
      <rect>
-      <x>20</x>
-      <y>110</y>
+      <x>0</x>
+      <y>40</y>
       <width>91</width>
       <height>16</height>
      </rect>
@@ -119,8 +119,8 @@
    <widget class="QPushButton" name="pushButton_2">
     <property name="geometry">
      <rect>
-      <x>20</x>
-      <y>160</y>
+      <x>0</x>
+      <y>90</y>
       <width>51</width>
       <height>23</height>
      </rect>
@@ -132,8 +132,8 @@
    <widget class="QPushButton" name="btn3">
     <property name="geometry">
      <rect>
-      <x>0</x>
-      <y>270</y>
+      <x>200</x>
+      <y>40</y>
       <width>141</width>
       <height>21</height>
      </rect>
@@ -145,8 +145,8 @@
    <widget class="QCheckBox" name="filter_check">
     <property name="geometry">
      <rect>
-      <x>200</x>
-      <y>100</y>
+      <x>140</x>
+      <y>10</y>
       <width>70</width>
       <height>17</height>
      </rect>
@@ -155,38 +155,12 @@
      <string>Filter</string>
     </property>
    </widget>
-   <widget class="QRadioButton" name="O1_radio">
-    <property name="geometry">
-     <rect>
-      <x>190</x>
-      <y>160</y>
-      <width>82</width>
-      <height>17</height>
-     </rect>
-    </property>
-    <property name="text">
-     <string>O1</string>
-    </property>
-   </widget>
-   <widget class="QRadioButton" name="O2_radio">
-    <property name="geometry">
-     <rect>
-      <x>190</x>
-      <y>180</y>
-      <width>82</width>
-      <height>17</height>
-     </rect>
-    </property>
-    <property name="text">
-     <string>O2</string>
-    </property>
-   </widget>
   </widget>
   <widget class="QLabel" name="label">
    <property name="geometry">
     <rect>
-     <x>320</x>
-     <y>10</y>
+     <x>0</x>
+     <y>0</y>
      <width>71</width>
      <height>16</height>
     </rect>
@@ -198,8 +172,8 @@
   <widget class="QwtPlot" name="qwtPlot_2">
    <property name="geometry">
     <rect>
-     <x>360</x>
-     <y>380</y>
+     <x>10</x>
+     <y>300</y>
      <width>421</width>
      <height>221</height>
     </rect>
@@ -208,8 +182,8 @@
   <widget class="QLabel" name="label_3">
    <property name="geometry">
     <rect>
-     <x>350</x>
-     <y>350</y>
+     <x>10</x>
+     <y>270</y>
      <width>71</width>
      <height>16</height>
     </rect>
@@ -221,21 +195,21 @@
   <widget class="QLabel" name="label_4">
    <property name="geometry">
     <rect>
-     <x>20</x>
-     <y>330</y>
+     <x>870</x>
+     <y>20</y>
      <width>101</width>
      <height>16</height>
     </rect>
    </property>
    <property name="text">
-    <string>Alpha Power</string>
+    <string>Alpha Power O1</string>
    </property>
   </widget>
   <widget class="QLabel" name="label_5">
    <property name="geometry">
     <rect>
-     <x>520</x>
-     <y>280</y>
+     <x>200</x>
+     <y>270</y>
      <width>46</width>
      <height>13</height>
     </rect>
@@ -247,8 +221,8 @@
   <widget class="QLabel" name="label_6">
    <property name="geometry">
     <rect>
-     <x>540</x>
-     <y>600</y>
+     <x>190</x>
+     <y>520</y>
      <width>51</width>
      <height>20</height>
     </rect>
@@ -260,21 +234,100 @@
   <widget class="QwtPlot" name="qwtPlot_3">
    <property name="geometry">
     <rect>
-     <x>20</x>
-     <y>380</y>
-     <width>281</width>
-     <height>221</height>
+     <x>870</x>
+     <y>40</y>
+     <width>391</width>
+     <height>241</height>
     </rect>
    </property>
   </widget>
   <widget class="QLineEdit" name="painedit">
    <property name="geometry">
     <rect>
-     <x>100</x>
-     <y>330</y>
+     <x>1130</x>
+     <y>10</y>
      <width>113</width>
      <height>20</height>
     </rect>
+   </property>
+  </widget>
+  <widget class="QwtPlot" name="qwtPlot_4">
+   <property name="geometry">
+    <rect>
+     <x>440</x>
+     <y>20</y>
+     <width>421</width>
+     <height>241</height>
+    </rect>
+   </property>
+  </widget>
+  <widget class="QwtPlot" name="qwtPlot_5">
+   <property name="geometry">
+    <rect>
+     <x>440</x>
+     <y>300</y>
+     <width>421</width>
+     <height>221</height>
+    </rect>
+   </property>
+  </widget>
+  <widget class="QLabel" name="label_7">
+   <property name="geometry">
+    <rect>
+     <x>670</x>
+     <y>270</y>
+     <width>46</width>
+     <height>13</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>Samples</string>
+   </property>
+  </widget>
+  <widget class="QLabel" name="label_8">
+   <property name="geometry">
+    <rect>
+     <x>630</x>
+     <y>520</y>
+     <width>51</width>
+     <height>20</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>Frequency</string>
+   </property>
+  </widget>
+  <widget class="QLineEdit" name="painedit_2">
+   <property name="geometry">
+    <rect>
+     <x>1150</x>
+     <y>300</y>
+     <width>113</width>
+     <height>20</height>
+    </rect>
+   </property>
+  </widget>
+  <widget class="QwtPlot" name="qwtPlot_6">
+   <property name="geometry">
+    <rect>
+     <x>870</x>
+     <y>330</y>
+     <width>391</width>
+     <height>211</height>
+    </rect>
+   </property>
+  </widget>
+  <widget class="QLabel" name="label_9">
+   <property name="geometry">
+    <rect>
+     <x>870</x>
+     <y>310</y>
+     <width>101</width>
+     <height>16</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>Alpha Power O2</string>
    </property>
   </widget>
  </widget>
