Added in xively upload
Need to work on making it faster

--- a/GUI_main/GUI_change.ui
+++ b/GUI_main/GUI_change.ui
@@ -16,9 +16,9 @@
   <widget class="QwtPlot" name="qwtPlot">
    <property name="geometry">
     <rect>
-     <x>0</x>
+     <x>10</x>
      <y>20</y>
-     <width>431</width>
+     <width>421</width>
      <height>241</height>
     </rect>
    </property>
@@ -28,7 +28,7 @@
     <rect>
      <x>20</x>
      <y>540</y>
-     <width>391</width>
+     <width>551</width>
      <height>131</height>
     </rect>
    </property>
@@ -67,8 +67,8 @@
    <widget class="QPushButton" name="btn2">
     <property name="geometry">
      <rect>
-      <x>200</x>
-      <y>70</y>
+      <x>270</x>
+      <y>40</y>
       <width>111</width>
       <height>23</height>
      </rect>
@@ -80,8 +80,8 @@
    <widget class="QPushButton" name="Exit">
     <property name="geometry">
      <rect>
-      <x>200</x>
-      <y>100</y>
+      <x>400</x>
+      <y>40</y>
       <width>101</width>
       <height>23</height>
      </rect>
@@ -93,7 +93,7 @@
    <widget class="QPushButton" name="btn1">
     <property name="geometry">
      <rect>
-      <x>200</x>
+      <x>250</x>
       <y>10</y>
       <width>141</width>
       <height>23</height>
@@ -132,8 +132,8 @@
    <widget class="QPushButton" name="btn3">
     <property name="geometry">
      <rect>
-      <x>200</x>
-      <y>40</y>
+      <x>400</x>
+      <y>10</y>
       <width>141</width>
       <height>21</height>
      </rect>
@@ -145,37 +145,50 @@
    <widget class="QCheckBox" name="filter_check">
     <property name="geometry">
      <rect>
-      <x>140</x>
+      <x>139</x>
       <y>10</y>
-      <width>70</width>
-      <height>17</height>
+      <width>71</width>
+      <height>20</height>
      </rect>
     </property>
     <property name="text">
      <string>Filter</string>
     </property>
    </widget>
+   <widget class="QCheckBox" name="chan_check">
+    <property name="geometry">
+     <rect>
+      <x>140</x>
+      <y>30</y>
+      <width>101</width>
+      <height>17</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>Change Channel</string>
+    </property>
+   </widget>
   </widget>
   <widget class="QLabel" name="label">
    <property name="geometry">
     <rect>
-     <x>0</x>
+     <x>10</x>
      <y>0</y>
      <width>71</width>
      <height>16</height>
     </rect>
    </property>
    <property name="text">
-    <string>Data Display</string>
+    <string>O1 Display</string>
    </property>
   </widget>
   <widget class="QwtPlot" name="qwtPlot_2">
    <property name="geometry">
     <rect>
-     <x>10</x>
-     <y>300</y>
+     <x>440</x>
+     <y>20</y>
      <width>421</width>
-     <height>221</height>
+     <height>241</height>
     </rect>
    </property>
   </widget>
@@ -183,13 +196,13 @@
    <property name="geometry">
     <rect>
      <x>10</x>
-     <y>270</y>
+     <y>280</y>
      <width>71</width>
      <height>16</height>
     </rect>
    </property>
    <property name="text">
-    <string>FFT Display</string>
+    <string>O2 Display</string>
    </property>
   </widget>
   <widget class="QLabel" name="label_4">
@@ -208,8 +221,8 @@
   <widget class="QLabel" name="label_5">
    <property name="geometry">
     <rect>
-     <x>200</x>
-     <y>270</y>
+     <x>170</x>
+     <y>260</y>
      <width>46</width>
      <height>13</height>
     </rect>
@@ -221,8 +234,8 @@
   <widget class="QLabel" name="label_6">
    <property name="geometry">
     <rect>
-     <x>190</x>
-     <y>520</y>
+     <x>620</x>
+     <y>260</y>
      <width>51</width>
      <height>20</height>
     </rect>
@@ -251,16 +264,6 @@
     </rect>
    </property>
   </widget>
-  <widget class="QwtPlot" name="qwtPlot_4">
-   <property name="geometry">
-    <rect>
-     <x>440</x>
-     <y>20</y>
-     <width>421</width>
-     <height>241</height>
-    </rect>
-   </property>
-  </widget>
   <widget class="QwtPlot" name="qwtPlot_5">
    <property name="geometry">
     <rect>
@@ -269,19 +272,6 @@
      <width>421</width>
      <height>221</height>
     </rect>
-   </property>
-  </widget>
-  <widget class="QLabel" name="label_7">
-   <property name="geometry">
-    <rect>
-     <x>670</x>
-     <y>270</y>
-     <width>46</width>
-     <height>13</height>
-    </rect>
-   </property>
-   <property name="text">
-    <string>Samples</string>
    </property>
   </widget>
   <widget class="QLabel" name="label_8">
@@ -328,6 +318,29 @@
    </property>
    <property name="text">
     <string>Alpha Power O2</string>
+   </property>
+  </widget>
+  <widget class="QwtPlot" name="qwtPlot_4">
+   <property name="geometry">
+    <rect>
+     <x>10</x>
+     <y>300</y>
+     <width>421</width>
+     <height>221</height>
+    </rect>
+   </property>
+  </widget>
+  <widget class="QLabel" name="label_7">
+   <property name="geometry">
+    <rect>
+     <x>180</x>
+     <y>520</y>
+     <width>46</width>
+     <height>13</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>Samples</string>
    </property>
   </widget>
  </widget>
