--- a/GUI_main/GUI_change.ui
+++ b/GUI_main/GUI_change.ui
@@ -67,9 +67,9 @@
    <widget class="QPushButton" name="btn2">
     <property name="geometry">
      <rect>
-      <x>270</x>
+      <x>250</x>
       <y>40</y>
-      <width>111</width>
+      <width>141</width>
       <height>23</height>
      </rect>
     </property>
@@ -80,8 +80,8 @@
    <widget class="QPushButton" name="Exit">
     <property name="geometry">
      <rect>
-      <x>400</x>
-      <y>40</y>
+      <x>360</x>
+      <y>70</y>
       <width>101</width>
       <height>23</height>
      </rect>
@@ -166,6 +166,19 @@
     </property>
     <property name="text">
      <string>Change Channel</string>
+    </property>
+   </widget>
+   <widget class="QPushButton" name="save_btn">
+    <property name="geometry">
+     <rect>
+      <x>400</x>
+      <y>40</y>
+      <width>141</width>
+      <height>23</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>Save</string>
     </property>
    </widget>
   </widget>
@@ -377,8 +390,8 @@
    <slot>update()</slot>
    <hints>
     <hint type="sourcelabel">
-     <x>287</x>
-     <y>358</y>
+     <x>270</x>
+     <y>580</y>
     </hint>
     <hint type="destinationlabel">
      <x>393</x>
@@ -393,12 +406,28 @@
    <slot>close()</slot>
    <hints>
     <hint type="sourcelabel">
-     <x>194</x>
-     <y>399</y>
+     <x>380</x>
+     <y>610</y>
     </hint>
     <hint type="destinationlabel">
      <x>396</x>
      <y>432</y>
+    </hint>
+   </hints>
+  </connection>
+  <connection>
+   <sender>pushButton_2</sender>
+   <signal>clicked()</signal>
+   <receiver>BatteryLevel</receiver>
+   <slot>update()</slot>
+   <hints>
+    <hint type="sourcelabel">
+     <x>69</x>
+     <y>641</y>
+    </hint>
+    <hint type="destinationlabel">
+     <x>101</x>
+     <y>603</y>
     </hint>
    </hints>
   </connection>
